Fix a mobile layout overflowing

--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -43,14 +43,6 @@
   margin: 0 0.75rem;
 }
 
-.normal-page__sidebar {
-  width: 100%;
-}
-
-.normal-page__content {
-  width: 100%;
-}
-
 @media (min-width: 1024px) {
   .normal-page {
     flex-direction: row;
